completed 9.2 remove usage tracking endpoint
